--- a/.env
+++ b/.env
@@ -1,1 +1,3 @@
-MONGODBURI = uri
+MONGODB_URI = 'mongodb+srv://khathabhamed:sBIgMoJ3OaItBcoH@cluster0.bn8rilc.mongodb.net/?retryWrites=true&w=majority'
+OPENAI_API_KEY = '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'
+PROJECT_ID = '6563d09235d1a0073a3af2a2'
