--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
-MONGODB_URI = 'mongodb+srv://khathabhamed:sBIgMoJ3OaItBcoH@cluster0.bn8rilc.mongodb.net/?retryWrites=true&w=majority'
-OPENAI_API_KEY = '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'
+MONGODB_URI = 'mongodb+srv://khathabhamed:p7xRES5MIe9qpIT6@cluster0.bn8rilc.mongodb.net/?retryWrites=true&w=majority'
+OPENAI_API_KEY = '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'
 PROJECT_ID = '6563d09235d1a0073a3af2a2'
+COHERE_API_KEY = '8AShvVmjK4sKOjtgIwWgKqla3mHTfGBaSmcqF6s0'
